Small fixes: have header map pop-up image at correct position relative to mouse even on page scroll; replace favicon with better image dimensions so it is not stretched horizontally.

--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,6 @@ nav {
 
 .Neighborhoods--marker {
   width:45px;
-  z-index:1;
   position:absolute;
 }
 
@@ -164,10 +163,6 @@ nav {
   height:28em;
   margin-left:5%;
   padding:3%;
-}
-
-.selected {
-  z-index:2;
 }
 
 @keyframes grow {
